log/reg page; feed base; Tailwind+TS

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-
-OSTGRES_SERVER=localhost
+POSTGRES_SERVER=localhost
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=gov_analytics
+EIS_API_URL=https://example.com/api
 
 SECRET_KEY=hERE_coMES_aWHIZZB4NG
 ACCESS_TOKEN_EXPIRE_MINUTES=30
