--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Сервис для анализа закупочного рынка РФ - ML аналитика, подбор тендеров для исполнителей. (Реализация ограничена 44 и 223 ФЗ)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "tailwindcss -i ./app/static/css/input.css -o ./app/static/css/styles.css --minify",
+    "watch:css": "tailwindcss -i ./app/static/css/input.css -o ./app/static/css/styles.css --watch"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.1.18"
   }
 }
