--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,18 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/startup.conf:/etc/nginx/conf.d/startup.conf_source:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf_source:ro
+      - ./nginx/nginx_entrypoint.sh:/nginx_entrypoint.sh:ro
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+    entrypoint: /bin/sh /nginx_entrypoint.sh
     depends_on:
       - eisals
 
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt:rw
+      - ./certbot/www:/var/www/certbot:rw
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email admin@eisals.ru --agree-tos --no-eff-email -d eisals.ru; sleep 12h & wait $!; done'"
