--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,4 +25,4 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt:rw
       - ./certbot/www:/var/www/certbot:rw
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email admin@eisals.ru --agree-tos --no-eff-email -d eisals.ru; sleep 12h & wait $!; done'"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot certonly --webroot --webroot-path=/var/www/certbot --email admin@eisals.ru --agree-tos --no-eff-email -d eisals.ru; sleep 12h & wait $$!; done'"
